--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "engines": {
     "node": ">=0.12.0"
   },
+  "bin": {
+    "mklicense": "./mklicense.js"
+  },
   "scripts": {
-    "test": "xo && ava"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "files": [
-    "index.js"
+    "mklicense.js"
   ],
   "keywords": [
     "cli",
