--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mklicense",
-  "version": "0.0.3",
+  "version": "0.1.3",
   "description": "CLI tool for building Licenses files. Easily.",
   "license": "MIT",
   "repository": "cezaraugusto/mklicense",
@@ -37,10 +37,10 @@
     "agpl"
   ],
   "dependencies": {
-    "cli-spinner": "^0.2.5",
-    "git-user-name": "^1.2.0",
     "inquirer": "^1.0.2",
-    "node-jsdom": "^3.1.5"
+    "node-jsdom": "^3.1.5",
+    "git-user-name": "^1.2.0",
+    "cli-spinner": "^0.2.5"
   },
   "devDependencies": {
     "standard": "^6.0.8"
