--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "mklicense": "./mklicense.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "standard && node mklicense.js"
   },
   "files": [
     "mklicense.js"
